Return client identity in authentication response
